# OtaBackend

./: .gitignore  Procfile  db.sqlite3  pyproject.toml  requirements.txt
ota/: admin.py  db.sqlite3  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
ota/migrations/: 0001_initial.py  0002_alter_otapackage_options_otapackage_hash.py
ota/ota/: asgi.py  models.py  settings.py  urls.py
ota/ota/migrations/: 0001_initial.py
